<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="service_name">.service.ServiceHaconiwa</string>
    <string name="value0001">Top Left</string>
    <string name="value0002">Top Right</string>
    <string name="value0003">Bottom Left</string>
    <string name="value0004">Bottom Right</string>
    <string name="value0005">1/?</string>
    <string name="value0006">Talk Mode</string>
    <string name="value0007">Size</string>
    <string name="value0008">DoorPosition</string>
    <string name="value0009">Saving Energy Mode</string>
    <string name="value0010">Start</string>
    <string name="value0011">Stop</string>
    <string name="value0012">Now Loading...</string>
    <string name="value0013">Cancel</string>
    <string name="value0014">Recommended Apps</string>
    <string name="value0015">Transparency</string>
    <string name="value0016">Left</string>
    <string name="value0017">Center</string>
    <string name="value0018">Right</string>
    <string name="value0019">Reference</string>
    <string name="value0020">File of obj</string>
    <string name="value0021">File of png</string>
    <string name="value0022">Set Original Model</string>
    <string name="value0023">Add file</string>
    <string name="value0024">Save</string>
    <string name="value0025">Delete</string>
    <string name="value0026">Select file of obj</string>
    <string name="value0027">Select file of png</string>
    <string name="value0028">Please choose the File format “.obj“</string>
    <string name="value0029">Please choose the File format “.png“</string>
    <string name="value0030">Range</string>
    <string name="value0031">Interval</string>
    <string name="value0032">Milli Sec</string>
    <string name="value0033">The file for \? were saved.</string>
    <string name="value0034">Help</string>
    <string name="value0035">***　How to Use “Set Original Model“　***</string>
    <string name="value0036">You register the files of obj from the button of “Set original model“.</string>
    <string name="value0037">You prepare three types of the files of obj, and register to the “Left“, “Center“, “Right“.</string>
    <string name="value0038">As shown below, will be displayed in the order of “Left“ → (Interval) → “Center“ → (Interval) → “Right“ → (Interval) → “Center“ → (Interval) → “Left“ → ...</string>
    <string name="value0039">***　Specification of Files of Obj　***</string>
    <string name="value0040">Files of obj require the following information:</string>
    <string name="value0041">・Normals</string>
    <string name="value0042">・UVs</string>
    <string name="value0043">・Triangulate Faces</string>
    <string name="value0044">example)The output from the Blender</string>
    <string name="value0045">***　About the “Range“　***</string>
    <string name="value0046">Model list</string>
    <string name="value0047">Original model</string>
    <string name="value0048">Privacy policy</string>
    <string name="service_intent_action">serviceHaconiwaIntent</string>
    <string name="service_intent1">charaNo</string>
    <string name="service_intent2">saveEnergy</string>
    <string name="service_intent3">talkAction</string>
    <string name="service_intent4">talkLanguage</string>
    <string name="service_intent5">coordinateRange</string>
    <string name="service_intent6">interval</string>
    <string name="service_intent7">size</string>
    <string name="service_intent8">doorPosition</string>
    <string name="service_intent9">transparency</string>
    <string name="activity_intent_action">menuActivityIntent</string>
    <string name="activity_intent1">method</string>
    <string name="activity_intent2">value</string>
    <string name="convert_directory">/data/data/com.ns.aco.sp/?/?</string>
    <string name="convert_vertex_file">v_?.txt</string>
    <string name="convert_normal_file">vn_?.txt</string>
    <string name="convert_texture_file">vt_?.txt</string>
    <string name="convert_png_file">p_?.png</string>
    <string name="app_name">hacoNiWA</string>
    <string name="notification_title">hacoNiWA</string>
    <string name="notification_message">walk</string>
    <string name="db_name">hacoNiWaDB</string>
    <string name="db_version">1</string>
    <string name="charaId_droid">00001</string>
    <string name="charaId_onepiece">00002</string>
    <string name="charaId_waso">00003</string>
    <string name="charaId_cardigan">00004</string>
    <string name="charaId_frog">00005</string>
    <string name="charaId_frogRain">00006</string>
    <string name="charaId_jersey">00007</string>
    <string name="charaId_witch">00008</string>
    <string name="charaId_original">00009</string>
    <string name="charaId_unity">00010</string>
    <string name="charaName_droid">Droid</string>
    <string name="charaName_yucco">Yucco</string>
    <string name="charaName_frog">Mr.Frog</string>
    <string name="charaName_original1">Original1</string>
    <string name="charaName_unity">Unity</string>
    <string name="talkId_droid">T00001</string>
    <string name="talkId_yucco">T00002</string>
    <string name="talkId_frog">T00005</string>
    <string name="talkId_original1">TO0001</string>
    <string name="talkId_unity">T00010</string>
    <string name="notify_id">00000001</string>
    <string name="notify_chkText">Hide</string>

    <string-array name="spinner_size">
        <item>1/3</item>
        <item>1/4</item>
        <item>1/5</item>
        <item>1/6</item>
        <item>1/7</item>
        <item>1/8</item>
        <item>1/9</item>
        <item>1/10</item>
        <item>1/11</item>
        <item>1/12</item>
        <item>1/13</item>
        <item>1/14</item>
        <item>1/15</item>
        <item>1/16</item>
        <item>1/17</item>
        <item>1/18</item>
        <item>1/19</item>
        <item>1/20</item>
    </string-array>

    <string-array name="spinner_position">
        <item>@string/value0001</item>
        <item>@string/value0002</item>
        <item>@string/value0003</item>
        <item>@string/value0004</item>
    </string-array>
</resources>
