<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/helpScrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/helpTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0035"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:theme="@style/TextViewStyle"  />

            <TextView
                android:id="@+id/helpTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0036"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:theme="@style/TextViewStyle"  />

            <TextView
                android:id="@+id/helpTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0037"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:theme="@style/TextViewStyle"  />

            <TextView
                android:id="@+id/helpTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0038"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:theme="@style/TextViewStyle"  />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3377BB"
                    android:orientation="vertical" >

	                <TextView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center"
	                    android:text="@string/value0016"
						android:textAppearance="@style/TextAppearance.AppCompat.Medium"
						android:theme="@style/TextViewStyle"  />

	                <ImageView
	                    android:id="@+id/helpDroidLeft"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/help_left" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/helpArrowLeft1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:src="@drawable/help_arrow_left" />

                <Space
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/helpArrowRight2"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:src="@drawable/help_arrow_right" />

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3377BB"
                    android:orientation="vertical" >

	                <TextView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center"
	                    android:text="@string/value0017"
						android:textAppearance="@style/TextAppearance.AppCompat.Medium"
						android:theme="@style/TextViewStyle"  />

	                <ImageView
	                    android:id="@+id/helpDroidCenter"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/help_center" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/helpArrowLeft2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:src="@drawable/help_arrow_left" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Space
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/helpArrowRight1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:src="@drawable/help_arrow_right" />

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3377BB"
                    android:orientation="vertical" >

	                <TextView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center"
	                    android:text="@string/value0018"
						android:textAppearance="@style/TextAppearance.AppCompat.Medium"
						android:theme="@style/TextViewStyle"  />

	                <ImageView
	                    android:id="@+id/helpDroidRight"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/help_right" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/helpTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0039"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:theme="@style/TextViewStyle"  />

            <TextView
                android:id="@+id/helpTextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0040"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:theme="@style/TextViewStyle"  />

            <TextView
                android:id="@+id/helpTextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0041"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:theme="@style/TextViewStyle"  />

            <TextView
                android:id="@+id/helpTextView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0042"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:theme="@style/TextViewStyle"  />

            <TextView
                android:id="@+id/helpTextView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0043"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:theme="@style/TextViewStyle"  />

            <TextView
                android:id="@+id/helpTextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="　"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/helpTextView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0044"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:theme="@style/TextViewStyle"  />

	        <HorizontalScrollView
	            android:id="@+id/horizontalScrollView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="horizontal" >

	                <ImageView
	                    android:id="@+id/helpBlender1"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/help_blender1" />

	                <ImageView
	                    android:id="@+id/helpBlender2"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/help_blender2" />

	            </LinearLayout>

	        </HorizontalScrollView>

	        <TextView
                android:id="@+id/helpTextView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="　"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:theme="@style/TextViewStyle"  />

	        <TextView
                android:id="@+id/helpTextView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0045"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:theme="@style/TextViewStyle"  />

	        <ImageView
                android:id="@+id/helpRange1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/help_range" />

	    </LinearLayout>

    </ScrollView>

</LinearLayout>