<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSetModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0022"
                android:theme="@style/NormalButtonStyle"/>

            <Space
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0034"
                android:theme="@style/NormalButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTransparency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/value0015"
                android:theme="@style/TextViewStyleAccent"/>

            <SeekBar
                android:id="@+id/barTransparency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/textSeekProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="   "
                android:theme="@style/TextViewStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/chkSavingEnergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/value0009"
            android:theme="@style/CheckBoxStyle"
            style="@style/TextViewStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textRange"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/value0030"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:theme="@style/TextViewStyle" />

            <EditText
                android:id="@+id/editRange"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:gravity="center|bottom"
                android:text="4.0"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:theme="@style/EditViewStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textInterval"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/value0031"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:theme="@style/TextViewStyle" />

            <EditText
                android:id="@+id/editInterval"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:gravity="center|bottom"
                android:text="0.5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:theme="@style/EditViewStyle" />

            <TextView
                android:id="@+id/textSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value0032"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:theme="@style/TextViewStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textSize"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/value0007"
                android:theme="@style/TextViewStyle"/>

            <Button
                android:id="@+id/btnSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SIZE"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textPosition"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/value0008"
                android:theme="@style/TextViewStyle"/>

            <Button
                android:id="@+id/btnDoorPosition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="DOORPOSITION"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnStart"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_weight="1"
                android:text="@string/value0010"
                android:theme="@style/NormalButtonStyle" />

            <Button
                android:id="@+id/btnStop"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_weight="1"
                android:text="@string/value0011"
                android:theme="@style/NormalButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>